tests/A2/accept/functionCall.ul


int foo(int x, boolean b, float f){
    return x;
}

void main(){
    int result;

    result = foo(4, true, 4.44);
}