tests/A2/reject/returnType1.ul
void main(){

}

int foo(){
    return 4.44;
}